# audio-diffusion

./: .gitignore  README.md  TODO.md  accelerate_deepspeed.yaml  accelerate_sagemaker.yaml  app.py  audio_to_images.py  generate_mels.sh  get_mel_params.py  ldm_autoencoder_kl.yaml  pyproject.toml  requirements-lock.txt  requirements.txt  setup.cfg  streamlit_app.py  train_unconditional.py  train_vae.py
audiodiffusion/: __init__.py  audio_encoder.py  mel.py  pipeline_audio_diffusion.py  utils.py
config/: accelerate_local.yaml  accelerate_multi_gpu.yaml  ldm_autoencoder_kl.yaml
notebooks/: audio_diffusion_pipeline.ipynb  audio_encoder.ipynb  conditional_generation.ipynb  gradio_app.ipynb  test-mel.ipynb  test-model.ipynb  test_mel.ipynb  test_model.ipynb  test_model_breaks.ipynb  test_vae.ipynb  train_model.ipynb
scripts/: add_cond_prev.py  audio_to_images.py  encode_audio.py  generate_and_save_variants.py  test_model.py  train_controlnet.py  train_unconditional.py  train_unet.py  train_vae.py
src/: audio_to_images.py  mel.py  train_unconditional.py
