[tool.black]
line-length = 119
target-version = ['py36']

[tool.poetry]
name = "audio-diffusion"
version = "0.1.0"
description = ""
authors = ["Robert Dargavel Smith <teticio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
