[metadata]
name = audiodiffusion
version = attr: audiodiffusion.VERSION
description = Generate Mel spectrogram dataset from directory of audio files.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL3
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = audiodiffusion
install_requires =
    torch
    numpy
    Pillow
    diffusers>=0.12.0
    librosa
    datasets>=2.9.0
